Remove extra space from home page iframe, which caused background image issues

--- a/resources/assets/src/app/components/home/home.component.scss
+++ b/resources/assets/src/app/components/home/home.component.scss
@@ -8,6 +8,7 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 ::ng-deep body .qc-home-page {
